update jdk version compatibility

--- a/build.gradle
+++ b/build.gradle
@@ -27,6 +27,15 @@ dependencies {
     testImplementation 'junit:junit:4.13'
 }
 
+java {
+    sourceCompatibility = JavaVersion.VERSION_11
+    targetCompatibility = JavaVersion.VERSION_11
+}
+
+compileJava {
+    options.compilerArgs.addAll(['--release', '11'])
+}
+
 task genstdlib {
     doLast {
         exec {
