--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -22,7 +22,5 @@ jobs:
         java-version: 11
     - name: Grant execute permission for gradlew
       run: chmod +x gradlew
-    - name: Build with Gradle
+    - name: Build & Test with Gradle
       run: ./gradlew -i build
-    - name: Test with Gradle
-      run: ./gradlew -i test
