--- a/build.gradle
+++ b/build.gradle
@@ -21,10 +21,13 @@ repositories {
 dependencies {
     implementation 'com.google.code.gson:gson:2.8.6'
     implementation 'org.bouncycastle:bcprov-jdk15on:1.66'
+    implementation 'org.apache.commons:commons-lang3:3.0'
+    implementation 'com.thetransactioncompany:jsonrpc2-client:1.15'
     // This dependency is used internally, and not exposed to consumers on their own compile classpath.
     implementation 'com.google.guava:guava:29.0-jre'
     // Use JUnit test framework
     testImplementation 'junit:junit:4.13'
+    testImplementation 'org.mockito:mockito-core:2.21.0'
 }
 
 java {
