update libra branch and re-generate stdlib

--- a/build.gradle
+++ b/build.gradle
@@ -36,8 +36,13 @@ compileJava {
     options.compilerArgs.addAll(['--release', '11'])
 }
 
-task genstdlib {
+task gen {
     doLast {
+        exec {
+            workingDir 'libra'
+            executable "sh"
+            args "-c", "git fetch && git reset --hard origin/testnet"
+        }
         exec {
             workingDir 'libra'
             executable "sh"
