--- a/build.gradle
+++ b/build.gradle
@@ -22,8 +22,9 @@ dependencies {
     implementation 'com.google.code.gson:gson:2.8.6'
     implementation 'org.bouncycastle:bcprov-jdk15on:1.66'
     implementation 'com.thetransactioncompany:jsonrpc2-client:1.15'
-    implementation 'com.squareup.okhttp:okhttp:2.5.0'
+    implementation 'com.squareup.okhttp3:okhttp:3.4.2'
     implementation 'design.contract:libbech32:1.0.0'
+    implementation 'org.apache.httpcomponents:httpclient:4.5.10'
     // This dependency is used internally, and not exposed to consumers on their own compile classpath.
     implementation 'com.google.guava:guava:29.0-jre'
     // Use JUnit test framework
@@ -34,10 +35,10 @@ java {
     sourceCompatibility = JavaVersion.VERSION_1_8
     targetCompatibility = JavaVersion.VERSION_1_8
 }
-
-compileJava {
-    options.compilerArgs.addAll(['--release', '8'])
-}
+//
+//compileJava {
+//    options.compilerArgs.addAll(['--release', '8'])
+//}
 
 task gen {
     doLast {
