--- a/build.gradle
+++ b/build.gradle
@@ -26,7 +26,7 @@ task sourceJar(type: Jar, dependsOn: classes) {
 task javadocJar(type: Jar, dependsOn: javadoc) {
     classifier = 'javadoc'
     from javadoc.destinationDir
-    failOnError false
+    enabled false
 }
 
 publishing {
