--- a/build.gradle
+++ b/build.gradle
@@ -100,6 +100,7 @@ dependencies {
     implementation 'com.squareup.okhttp3:okhttp:3.4.2'
     implementation 'design.contract:libbech32:1.0.0'
     implementation 'org.apache.httpcomponents:httpclient:4.5.10'
+    implementation 'org.apache.commons:commons-lang3:3.11'
     // This dependency is used internally, and not exposed to consumers on their own compile classpath.
     implementation 'com.google.guava:guava:29.0-jre'
     // Use JUnit test framework
