--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -25,7 +25,7 @@ jobs:
       - name: Grant execute permission for gradlew
         run: chmod +x gradlew
       - name: Build & Test with Gradle
-        run: ./gradlew -i build
+        run: ./gradlew -i assemble -x signArchives
 
   publish:
     runs-on: ubuntu-latest
