--- a/build.gradle
+++ b/build.gradle
@@ -113,10 +113,9 @@ java {
 }
 
 signing {
-    def signingKeyId = System.getenv("signingKeyId")
     def signingKey = System.getenv("signingKey")
     def signingPassword = System.getenv("signingPassword")
-    useInMemoryPgpKeys(signingKeyId, signingKey, signingPassword)
+    useInMemoryPgpKeys(signingKey, signingPassword)
     sign publishing.publications.mavenJava
 }
 
