--- a/build.gradle
+++ b/build.gradle
@@ -29,7 +29,7 @@ publishing {
         mavenJava(MavenPublication) {
             from components.java
 
-            artifact sourceJar
+//            artifact sourceJar
 //            artifact javadocJar
 
             pom.withXml {
