--- a/build.gradle
+++ b/build.gradle
@@ -30,6 +30,7 @@ publishing {
             from components.java
             pom {
                 name = 'Libra Client SDK'
+                description = 'The official Libra Client SDK for the Java programming language.'
                 url = 'https://github.com/libra/libra-client-sdk-java'
                 licenses {
                     license {
