--- a/build.gradle
+++ b/build.gradle
@@ -11,7 +11,7 @@ repositories {
 }
 
 group 'org.libra'
-version '0.0.1-SNAPSHOT'
+version '0.0.1'
 
 apply plugin: 'java-library'
 apply plugin: 'java'
