--- a/build.gradle
+++ b/build.gradle
@@ -11,7 +11,7 @@ repositories {
 }
 
 group 'org.libra'
-version '0.0.3'
+version '0.1.0'
 
 apply plugin: 'java-library'
 apply plugin: 'java'
@@ -20,6 +20,7 @@ apply plugin: 'maven-publish'
 apply plugin: 'signing'
 apply plugin: 'com.google.protobuf'
 apply plugin: 'idea'
+apply plugin: 'io.codearte.nexus-staging'
 
 task sourceJar(type: Jar, dependsOn: classes) {
     classifier 'sources'
@@ -130,6 +131,7 @@ buildscript {
     }
     dependencies {
         classpath 'com.google.protobuf:protobuf-gradle-plugin:0.8.13'
+        classpath "io.codearte.gradle.nexus:gradle-nexus-staging-plugin:0.22.0"
     }
 }
 protobuf {
@@ -144,4 +146,9 @@ jacocoTestReport {
     reports {
         html.enabled(true)
     }
+}
+
+nexusStaging {
+    username = System.getenv("nexusUsername")
+    password = System.getenv("nexusPassword")
 }
