--- a/build.gradle
+++ b/build.gradle
@@ -34,7 +34,7 @@ publishing {
             pom {
                 name = 'Diem Client SDK'
                 description = 'The official Diem Client SDK for the Java programming language.'
-                url = 'https://github.com/diem/client-sdk-java'
+                url = 'https://github.com/libra/client-sdk-java'
                 licenses {
                     license {
                         name = 'The Apache License, Version 2.0'
@@ -48,8 +48,8 @@ publishing {
                     }
                 }
                 scm {
-                    connection = 'scm:git:git@github.com:diem/client-sdk-java.git'
-                    url = 'https://github.com/diem/client-sdk-java'
+                    connection = 'scm:git:git@github.com:libra/client-sdk-java.git'
+                    url = 'https://github.com/libra/client-sdk-java'
                 }
             }
             tasks.withType(Jar) {
